--- a/hivemind-project/package.json
+++ b/hivemind-project/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "axios": "^1.7.7",
     "emailjs-com": "^3.2.0",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
