done: server for login system and npm run dev in one command

--- a/hivemind-project/package.json
+++ b/hivemind-project/package.json
@@ -8,7 +8,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "frontend": "npm run dev",
+    "backend": "npm start --prefix server",
+    "start-all": "concurrently \"npm run frontend\" \"npm run backend\""
   },
   "dependencies": {
     "@headlessui/react": "^2.1.10",
@@ -26,6 +29,7 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
