--- a/hivemind-project/package.json
+++ b/hivemind-project/package.json
@@ -17,8 +17,12 @@
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
+    "express": "^4.21.1",
     "lucide-react": "^0.454.0",
+    "mongoose": "^8.8.1",
+    "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0"
