--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build project
         run: |
           cd hivemind-project
-          npm run build  # O el comando adecuado para tu proyecto
+          npm run dev
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
