--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.1.5",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "dompurify": "^3.2.2",
     "emailjs-com": "^3.2.0",
     "express": "^4.21.1",
     "lucide-react": "^0.454.0",
